layout kinda final

--- a/index.html
+++ b/index.html
@@ -19,28 +19,68 @@
       <div class="container">
         <div class="card card-left">
           <div class="header">
-            <h1 class="title">Do not do<span class="dot-animated"></span></h1>
-            <h2 class="date-detailed">2023.03.21</h2>
+            <h1 class="title gradient-text">
+              Do not do<span class="dot-animated"></span>
+            </h1>
+            <h2 class="date-detailed">
+              2023. 03. <span class="gradient-text">22</span>
+            </h2>
           </div>
           <div class="search-box">
-            <input type="text" class="search" placeholder="Search" />
+            <input type="text" class="search input-text" placeholder="Search" />
           </div>
           <div class="filter-box">
-            <div class="filter filter-done">Done</div>
+            <div class="filter filter-done filter-active">Done</div>
             <div class="filter filter-undone">Undone</div>
-            <div class="filter filter-type">
-              <select>
-                <option>Other</option>
-                <option>Other</option>
-                <option>Other</option>
-              </select>
-            </div>
           </div>
           <div class="task-list">
             <div class="task">
               <div class="task-title">Weekly review</div>
-              <div class="task-description">Wanda Square E6</div>
               <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">
+                Wanda Sqsadjkasjodhhdasdasdasdasdasd sadasd sdasd d sdasd
+                isuuare E6
+              </div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
+            </div>
+            <div class="task">
+              <div class="task-title">Weekly review</div>
+              <div class="task-time-created">9:00 am</div>
+              <div class="task-description">Wanda Square E6</div>
             </div>
           </div>
           <div class="add-task">
@@ -49,30 +89,19 @@
           </div>
         </div>
         <div class="card card-right">
-          <div class="title-progress-step">
-            What you do not want to do? *next* Choose priority
-          </div>
-          <div class="create-task-text-box">
-            <input type="text" class="create-task-title" />
-            <input type="text" class="create-task-description" />
-          </div>
-          <div class="create-task-priority">
-            <form action="" class="priority">
-              <label for="low">Low</label>
-              <input data-priority="low" id="low" type="radio" name="radio" />
-              <label for="medium">Medium</label>
-              <input
-                data-priority="medium"
-                id="medium"
-                type="radio"
-                name="radio"
-              />
-              <label for="high">High</label>
-              <input data-priority="high" id="high" type="radio" name="radio" />
-              <label for="none">None</label>
-              <input data-priority="none" id="none" type="radio" name="radio" />
-            </form>
-          </div>
+          <div class="title-progress-step">What you do not want to do?</div>
+          <input
+            type="text"
+            class="create-task-title"
+            placeholder="Write a short name"
+          />
+
+          <input
+            type="text"
+            class="create-task-description"
+            placeholder="Write description"
+          />
+          <input type="datetime-local" class="task-datetime" />
         </div>
       </div>
     </section>
