--- a/index.html
+++ b/index.html
@@ -33,67 +33,7 @@
             <div class="filter filter-done filter-active">Done</div>
             <div class="filter filter-undone">Undone</div>
           </div>
-          <div class="task-list">
-            <div class="task">
-              <div class="task-title">Weekly review</div>
-              <div class="btn-del">
-                <ion-icon
-                  class="del-icon"
-                  name="close-circle-outline"
-                ></ion-icon>
-              </div>
-              <div class="task-time-created">9:00 am</div>
-              <div class="task-description">Wanda Square E6</div>
-            </div>
-            <div class="task">
-              <div class="task-title">Weekly review</div>
-              <div class="btn-del">
-                <ion-icon
-                  class="del-icon"
-                  name="close-circle-outline"
-                ></ion-icon>
-              </div>
-              <div class="task-time-created">9:00 am</div>
-              <div class="task-description">Wanda Square E6</div>
-            </div>
-            <div class="task">
-              <div class="task-title">Weekly review</div>
-              <div class="btn-del">
-                <ion-icon
-                  class="del-icon"
-                  name="close-circle-outline"
-                ></ion-icon>
-              </div>
-              <div class="task-time-created">9:00 am</div>
-              <div class="task-description">Wanda Square E6</div>
-            </div>
-            <div class="task">
-              <div class="task-title">Weekly review</div>
-              <div class="btn-del">
-                <ion-icon
-                  class="del-icon"
-                  name="close-circle-outline"
-                ></ion-icon>
-              </div>
-              <div class="task-time-created">9:00 am</div>
-              <div class="task-description">Wanda Square E6</div>
-            </div>
-            <div class="task">
-              <div class="task-title">Weekly review</div>
-              <div class="btn-del">
-                <ion-icon
-                  class="del-icon"
-                  name="close-circle-outline"
-                ></ion-icon>
-              </div>
-              <div class="task-time-created">9:00 am</div>
-              <div class="task-description"></div>
-            </div>
-          </div>
-          <div class="add-task">
-            <div class="add-task-icon"></div>
-            <div class="add-task-text">Add new <span>To don't</span></div>
-          </div>
+          <div class="task-list"></div>
         </div>
         <div class="card card-right">
           <div class="title-progress-step">What you do not want to do?</div>
