delete and done state change feature

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
             type="text"
             class="create-task-title"
             placeholder="Write here,"
+            maxlength="20"
           />
           <input
             type="text"
             class="create-task-description"
             placeholder="Add more info."
+            maxlength="30"
           />
           <input type="datetime-local" class="task-datetime" />
           <div class="add-task">
