save to localstorage feature

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <h1 class="title gradient-text">
               Do not do<span class="dot-animated"></span>
             </h1>
+            <div class="save-tasks">
+              <ion-icon class="save-icon" name="save"></ion-icon>
+            </div>
             <h2 class="date-detailed">
               2023. 03. <span class="gradient-text">22</span>
             </h2>
