--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="task-list"></div>
         </div>
         <div class="card card-right">
-          <div class="title-progress-step">What you do not want to do?</div>
+          <div class="title-progress-step">What do you not want to do?</div>
           <input
             type="text"
             class="create-task-title"
