done undone bug

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <input type="text" class="search input-text" placeholder="Search" />
           </div>
           <div class="filter-box">
-            <div class="filter filter-done filter-active">Done</div>
-            <div class="filter filter-undone">Undone</div>
+            <div class="filter" data-filter="done">Done</div>
+            <div class="filter" data-filter="undone">Undone</div>
           </div>
           <div class="task-list"></div>
         </div>
